components/Table/Table.css
.ztopia-table {
  position: relative;
  padding-top: 35px;
  font-size: $font-size-s;
  line-height: normal;

  &__container {
    overflow-y: auto;

    > table {
      width: 100%;
      border-collapse: collapse;
    }
  }

  &__bottom-element {
    display: flex;
    justify-content: center;
    padding: $spacing-l 0;
  }

  &__row-hovered-content {
    position: relative;
    padding: 0;
    visibility: hidden;

    > div {
      position: absolute;
      top: 0;
      right: 0;
      display: flex;
      align-items: center;
      justify-content: flex-end;
      height: 35px;
      padding: 0 $spacing-l;
      color: $white;
      word-break: normal;
      background-color: $white;
    }
  }

  &__row {
    border-bottom: 1px solid $black-dark;

    &.is-hoverable {
      &:hover {
        background-color: $white;

        .ztopia-table__row-hovered-content {
          visibility: visible;
        }
      }
    }
  }

  &__head-cell {
    padding: 0 $spacing-l;
    white-space: nowrap;

    > div {
      position: absolute;
      top: 0;
      margin-left: -$spacing-l;
      padding: $spacing-s $spacing-l;
      color: $black-dark;
    }

    &--placeholder {
      padding: 0;

      > div {
        display: none;
      }
    }
  }

  &__cell {
    height: 36px;
    padding: 0 $spacing-l;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }

  &__pagination {
    display: flex;
    align-items: center;
    float: right;
    margin-top: $spacing-s;
  }

  &__pagination-controller {
    cursor: pointer;
    transition: $transition-fast;

    &--prev {
      margin: 0 $spacing-l;
    }

    &:hover {
      color: $black-light;
    }

    &.is-disabled {
      color: $white-dark;
      cursor: not-allowed;
    }
  }

  &__loader {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%);
  }
}

